app/assets/stylesheets/humon_node.css.scss
$copygray: #555555;
$grayDark: darken($copygray, 15%);
$grayDarker: darken($copygray, 30%);
$grayLight: lighten($copygray, 15%);
$grayLighter: lighten($copygray, 30%);
$grayLightest: lighten($copygray, 45%);

$activeColor: rgb(72, 137, 255);
$activeColorDark: darken($activeColor, 30%);
$activeColorLight: lighten($activeColor, 30%);

$glyphcolor: darken($grayLightest, 5%);
$glyphsize: 14px;
$lineheight: 20px;

$nodeWhiteIndent: 15px;
$nodeLeftBorder: 4px;
$fieldWhiteIndent: 15px;

@mixin imp {
  border: 1px solid red;
}

span.blocky {
  display: inline-block;
  width: 100%;
  border: none;
}

.node {
  cursor: text;
  color: $copygray;
  position: relative;
  padding-left: $nodeWhiteIndent;
  border: 0px transparent solid;
  border-left: $nodeLeftBorder white solid;
  background: white;
}

.node.node-literal { }
.node.node-literal:hover { }
.node.node-collection {
  // see documentation on humonNodeView.suppressGap
  padding-bottom: 5px;
}
.node.node-collection:hover { }
/*
 * Active node styling
 */
.node.active {
}

.node.active > .blocky {
  background: $activeColorLight
}
.node.active > .node {
  border-left: $nodeLeftBorder $activeColorLight solid;
}
.node.active > span.blocky > textarea.content-field.label-field {
  color: $activeColorDark;
  text-decoration: underline;
}

/*
 * Active child styling
 */
.node.activeChild > span.blocky > textarea.content-field.label-field {
  color: lighten($grayDark, 5%);
  text-decoration: underline;
}



/*
 * Content Fields
 */
textarea.content-field {
  color: $copygray;
  height: $lineheight;
  border: none;
  padding: 0px;
  margin: 0px;
  border-radius: 0px;
  box-shadow: none;
  resize: none;
  background: none;
  overflow: hidden;
}
textarea.content-field:focus {
  border: none;
  box-shadow: none;
}

textarea.content-field.val-field {
  min-width: 100px;
}
textarea.content-field.val-field:focus { }

/*
 * BigValField
 */
textarea.content-field.val-field.big-val-field {
  display: none
}
textarea.content-field.val-field.big-val-field.editing {
  display: block;
  width: 100%;
  background: lighten($activeColorLight, 4%);
  position: relative;
  border-left: $nodeLeftBorder $activeColorLight solid;
  padding: 2px;
  padding-left: $fieldWhiteIndent*2;
  // left: $fieldWhiteIndent + $fieldWhiteIndent 
}
.node-item-collection-wrapper.editing {
  display: none;
}

/*
 * Proxy Field
 */
textarea.content-field.proxy-field {
  padding-left: 2* $fieldWhiteIndent;
  position: absolute;
}
textarea.content-field.proxy-field.editing {
  background: rgba(255, 0, 0, 0.5);
  // z-index: 1000;
  top: $lineheight;
  left: $fieldWhiteIndent + $fieldWhiteIndent + $nodeLeftBorder
}
.blocky.editing ~ .node-item-collection-wrapper {
  // display: none;
}
/*
 * Label Field
 */
textarea.content-field.label-field {
  padding-left: $fieldWhiteIndent;
  min-width: 20px;
}
/*
 * index field
 */
textarea.content-field.idx-field {
  width: 20px;
  color: $grayLight;
}
textarea.content-field.idx-field:focus { }
/*
 * Key Field
 */
textarea.content-field.key-field {
  min-width: 25px;
  width: 200px;
}
textarea.content-field.key-field:focus { }

/*********************
 * Glyphs
 ********************/
span.colon-glyph {
  position: relative;
  left: -10px;
}
/*
 * open glyph
 */
span.open-glyph:before {
  font-size: $glyphsize;
  color: $glyphcolor;
  position: absolute;
}
.node.active.node-hash > span.blocky > span.open-glyph:before{
  content: '{';
}
.node.active.node-list > span.blocky > span.open-glyph:before{
  content: '[';
}
/*
 * close glyph
 */
span.close-glyph {
  z-index: 1001;
}

span.close-glyph:after {
  font-size: $glyphsize;
  color: $glyphcolor;
  position: absolute;
  padding-left: 15px;
  bottom: -6px;
  z-index: 1001;
}
.node.active > span.close-glyph:after {
  border-left: $nodeLeftBorder $activeColorLight solid;
}
.node.active.node-hash > span.close-glyph:after{
  content: '}';
}
.node.active.node-list > span.close-glyph:after{
  content: ']';
}

// see hnv.suppressGap
.node.node-collection.suppress-gap {
  padding-bottom: 0px;// transparent solid;
  margin-bottom: 0px;// transparent solid;
  margin-top: 0px;// transparent solid;
}

/*
 * Autogrow Tests
 */
textarea.autogrow-field.content-field {
  @include imp;
  overflow: hidden;
  height: 150px;
  padding-top: 50px;
  border-top: 15px red solid;
  border-bottom: 15px red solid;
  padding-bottom: 50px;
}

